Update index.html Link.

--- a/index.html
+++ b/index.html
@@ -117,5 +117,8 @@
         }
 
         </script>
+        <main>
+            <a href="url">https://souzaderecife.github.io/relogiodigital/</a>
+        </main>
 </body>
 </html>
