--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         </script>
         <main>
-            <a href="url">https://souzaderecife.github.io/relogiodigital/</a>
+            <a href="https://souzaderecife.github.io/relogiodigital">Relógio Digital</a>
         </main>
 </body>
 </html>
