--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             padding: 0;
         }
         .fundo{
-            background-image: linear-gradient(45deg,black, crimson);
+            background-color: aqua;
             height: 120vh;
             color: white;
             font-family: 'Times New Roman', Times, serif;
@@ -20,7 +20,7 @@
 
             .calculadora{
                 position:absolute;
-                background-color: black;
+                background-image: url(./desenho-de-adesivo-com-calculadora-isolada_1308-60994.png);
                 top: 70%;
                 left: 50%;
                 transform:translate(-50%,-50%);
