Update index.html audio

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         padding: 5px;
         
     }
-
+.audio {
+    background-color: aquamarine;
+}
     </style>
 </head>
 <body>
@@ -120,5 +122,9 @@
         <main>
             <a href="https://souzaderecife.github.io/relogiodigital">Relógio Digital</a>
         </main>
+
+<div class="audio">
+        <audio src="badtings.mp3" autoplay controls></audio>
+</div>
 </body>
 </html>
