Update index.html muted

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </main>
 
 <div class="audio">
-        <audio src="badtings.mp3" autoplay controls></audio>
+        <audio src="badtings.mp3" autoplay controls muted></audio>
 </div>
 </body>
 </html>
