--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         </script>
         <main>
-            <a href="https://souzaderecife.github.io/relogiodigital">Relógio Digital</a>
+            <a href="https://souzaderecife.github.io/somscript">Relógio Digital</a>
         </main>
 
 <div class="audio">
