--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             .calculadora{
                 position:absolute;
-                background-image: url(./desenho-de-adesivo-com-calculadora-isolada_1308-60994.png);
+                background-image: url(mulher-russa-grafica-viagem-de-perda-de-peso-de-alta-qualidade_1100672-5702.png);
                 top: 70%;
                 left: 50%;
                 transform:translate(-50%,-50%);
