--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
             .calculadora{
                 position:absolute;
-                background-image: url(mulher-russa-grafica-viagem-de-perda-de-peso-de-alta-qualidade_1100672-5702.png) align=center;
+                background-image: url(mulher-russa-grafica-viagem-de-perda-de-peso-de-alta-qualidade_1100672-5702.png);
+                Bachground align=center;
                 top: 70%;
                 left: 50%;
                 transform:translate(-50%,-50%);
