--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </main>
 
 <div class="audio">
-        <audio src="badtings.mp3" autoplay controls muted loop></audio>
+        <audio src="badtings.mp3" controls muted loop></audio>
 </div>
 </body>
 </html>
