--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             .calculadora{
                 position:absolute;
                 background-image: url(mulher-russa-grafica-viagem-de-perda-de-peso-de-alta-qualidade_1100672-5702.png);
-                Bachground: pattern;
+                Bachground-repeat: no-repeat;
                 top: 70%;
                 left: 50%;
                 transform:translate(-50%,-50%);
