--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             .calculadora{
                 position:absolute;
                 background-image: url(mulher-russa-grafica-viagem-de-perda-de-peso-de-alta-qualidade_1100672-5702.png);
-                Bachground-repeat: no-repeat;
+                Background-repeat: no-repeat;
+                background-position: center;
                 top: 70%;
                 left: 50%;
                 transform:translate(-50%,-50%);
