--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 background-image: url(mulher-russa-grafica-viagem-de-perda-de-peso-de-alta-qualidade_1100672-5702.png);
                 Background-repeat: no-repeat;
                 background-position: center;
-                background-size: cover;
+                background-size: 100%;
                 top: 70%;
                 left: 50%;
                 transform:translate(-50%,-50%);
