--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
         .fundo{
             background-color: aqua;
-            height: 120vh;
+            height: 150vh;
             color: white;
             font-family: 'Times New Roman', Times, serif;
             text-align : center;
@@ -23,7 +23,7 @@
                 background-image: url(mulher-russa-grafica-viagem-de-perda-de-peso-de-alta-qualidade_1100672-5702.png);
                 Background-repeat: no-repeat;
                 background-position: center;
-                background-size: 150%;
+                background-size: cover;
                 top: 70%;
                 left: 50%;
                 transform:translate(-50%,-50%);
