--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             .calculadora{
                 position:absolute;
-                background-image: url(mulher-russa-grafica-viagem-de-perda-de-peso-de-alta-qualidade_1100672-5702.png);
+                background-image: url(images (russa2).jpeg;
                 Background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
