--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             padding: 0;
         }
         .fundo{
-            background-color: aqua;
+            background-color: gray;
             height: 85vh;
             color: white;
             font-family: 'Times New Roman', Times, serif;
