--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     }
 .audio {
     background-color: black;
-    position: center;
+    position: absolute;
+    left: -50;
 }
     </style>
 </head>
