--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             padding: 0;
         }
         .fundo{
-            background-color: gray;
+            background-image: linear-gradient(45deg,  black, white);
             height: 85vh;
             color: white;
             font-family: 'Times New Roman', Times, serif;
@@ -57,7 +57,7 @@
 .audio {
     background-color: black;
     position: absolute;
-    left: 2.7%;
+    left: 2.75%;
 }
     </style>
 </head>
