--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             .audio {
     background-color: black;
     position: absolute;
-    left: 2.8%;
+    top: 70%;
+                left: 2.8%;
 }
             }
 
