--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
         color: black;
         text-align: right;
         padding: 5px;
-
 }
+.audio {
+Bachground-color: black;
+    
+            }
     </style>
 </head>
 <body>
@@ -119,9 +122,9 @@
         }
 
         </script>
-        <main>
+        <div>
             <a href="https://souzaderecife.github.io/somscript">Relógio Digital</a>
-        </main>
+        </div>
 
 <div class="audio">
         <audio src="badtings.mp3" controls muted loop></audio>
