--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 }
 .audio {
     position: absolute;
-    top: 70%;
-Bachground-color: black;
+    top: 90%;
+    left: 2.8%;
+Bachground: black;
     
             }
     </style>
