--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 }
 .audio {
     position: absolute;
-    top: 100%;
+    top: 95%;
     left: 2.8%;
 
     
@@ -125,7 +125,7 @@
         }
 
         </script>
-        <div>
+        <div class=relógio>
             <a href="https://souzaderecife.github.io/somscript">Relógio Digital</a>
         <div class="audio">
         <audio src="badtings.mp3" controls muted loop></audio>
