--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         </script>
         <div class=relógio>
-            <a href="https://souzaderecife.github.io/somscript">Relógio Digital</a>
+        </h1><a href="https://souzaderecife.github.io/somscript">Relógio Digital<h1></a>
         <div class="audio">
         <audio src="badtings.mp3" controls muted loop></audio>
         </div>
