--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
         <div class="audio">
         <audio src="badtings.mp3" controls muted loop></audio>
         </div>
+        <div>
         </h1><a href="https://souzaderecife.github.io/somscript">Relógio Digital<h1></a>
-
+        </div>
 
 </body>
 </html>
