--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 
     
             }
+        .relogio {
+Bachground: black;
+        }
     </style>
 </head>
 <body>
@@ -130,7 +133,7 @@
         <div class="audio">
         <audio src="badtings.mp3" controls muted loop></audio>
         </div>
-        <div>
+        <div class= relogio>
         </h1><a href="https://souzaderecife.github.io/somscript">Relógio Digital<h1></a>
         </div>
     </div>
