--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
     <div class= relogio>
     </h1><a href="https://souzaderecife.github.io/somscript">Relógio Digital<h1></a>
+    <a href="app-debug.apk" download>Jokempo</a>
     </div>
 
         <script>
