--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
     <div class= relogio>
     </h1><a href="https://souzaderecife.github.io/somscript">Relógio Digital<h1></a>
     <a href="app-debug.apk" download>Jokempo</a>
-    <img=""></img>
+    <img src="">
+    <img src="">
     </div>
 
         <script>
