--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     <div class= relogio>
     </h1><a href="https://souzaderecife.github.io/somscript">Relógio Digital<h1></a>
     <a href="app-debug.apk" download>Jokempo</a>
-    <img src="images (2).jpeg">
-    <img src="jokenpo-6410cd40d6c18-large.jpg">
+    <img src="images (2).jpeg" width= "30px">
+    <img src="jokenpo-6410cd40d6c18-large.jpg" width= "30px">
     </div>
 
         <script>
