--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
     <div class= relogio>
     </h1><a href="https://souzaderecife.github.io/somscript">Relógio Digital<h1></a>
     <a href="app-debug.apk" download>Jokempo</a>
+    </div>
+    <div>
+    display= incline block;
     <img src="images (2).jpeg" width= "200px">
     <img src="jokenpo-6410cd40d6c18-large.jpg" width= "200px">
     </div>
