--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 .relogio {
     
 }
+        .ladoalado {
+display: incline block;
+            }
     </style>
 </head>
 <body>
@@ -136,8 +139,8 @@
     </h1><a href="https://souzaderecife.github.io/somscript">Relógio Digital<h1></a>
     <a href="app-debug.apk" download>Jokempo</a>
     </div>
-    <div>
-    display= incline block;
+    
+    <div class=ladoalado>
     <img src="images (2).jpeg" width= "200px">
     <img src="jokenpo-6410cd40d6c18-large.jpg" width= "200px">
     </div>
