--- a/index.html
+++ b/index.html
@@ -141,8 +141,13 @@ display: incline block;
     </div>
     
     <div class=ladoalado>
-    <img src="images (2).jpeg" width= "200px">
-    <img src="jokenpo-6410cd40d6c18-large.jpg" width= "200px">
+    
+        <div>
+        <img src="images (2).jpeg" width= "200px">
+        </div>
+        <div>
+            <img src="jokenpo-6410cd40d6c18-large.jpg" width= "200px">
+    </div>
     </div>
 
         <script>
