--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
     
 }
         .ladoalado {
+margin-left: 5px;
 display: inline block;
-justfy content: center;
+justify content: center;
+align items: center;
             }
     </style>
 </head>
