--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ align items: center;
     </div>
     
     <div class=ladoalado>
-        <img src="images (2).jpeg" width= "150px">
+        <img src="Recorder_18102024_200756.jpg" width= "150px">
         <img src="jokenpo-6410cd40d6c18-large.jpg" width= "150px">
         </div>
 
