--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ align items: center;
 
     <div class= relogio>
     </h1><a href="https://souzaderecife.github.io/somscript">Relógio Digital<h1></a>
+    <a href="app-debug.apk" download>Calculadora</a>
     <a href="app-debug.apk" download>Jokempo</a>
     </div>
     
