--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@ align items: center;
 
     <div class= relogio>
     </h1><a href="https://souzaderecife.github.io/somscript">Relógio Digital<h1></a>
-    <a href="app-debug.apk" download>Calculadora</a>
-    <a href="app-debug.apk" download>Jokempo</a>
+    <h3><a href="app-debug.apk" download>Calculadora</a></h3>
+    <h3><a href="app-debug.apk" download>Jokempo</a></h3>
     </div>
     
     <div class=ladoalado>
