--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ align items: center;
     </div>
 
     <div class= relogio>
-    </h1><a href="https://souzaderecife.github.io/somscript">Relógio Digital<h1></a>
+    </h1><a href="https://souzaderecife.github.io/video/">Relógio Digital<h1></a>
     <h3><a href="app-debug.apk" download>Calculadora</a></h3>
     <h3><a href="app-debug.apk" download>Jokempo</a></h3>
     </div>
