--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@ align items: center;
     
     </div>
 
-    <div class= relogio>
+    <div class= relogio2>
     </h1><a href="https://souzaderecife.github.io/video/">Relógio Digital<h1></a>
+    </div>
+    <div class= relogio>
     <h3><a href="app-debug.apk" download>Calculadora</a></h3>
     <h3><a href="app-debug.apk" download>Jokempo</a></h3>
     </div>
