--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 .relogio {
     display: flex;
     justify-content: space-between;
+    margin: 10px;
 }
         .ladoalado {
 margin-left: 5px;
