--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
     margin: 10px;
 }
         .ladoalado {
-margin-left: 5px;
-display: inline block;
-justify content: center;
-align items: center;
+  display: flex;
+    justify-content: space-between;
+    margin: 10px;
             }
     </style>
 </head>
