--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
 }
 
 .relogio {
+    bachground: black;
     display: flex;
     justify-content: space-between;
     margin: 10px;
 }
         .ladoalado {
+            bachground: gray;
   display: flex;
     justify-content: space-between;
     margin: 10px;
