--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 }
 
 .relogio {
-    bachground: black;
     display: flex;
     justify-content: space-between;
     margin: 10px;
@@ -125,7 +124,7 @@
     <div class= relogio2>
     </h1><a href="https://souzaderecife.github.io/video/">Relógio Digital<h1></a>
     </div>
-    <div class= relogio>
+    <div class= relogio background: black>
     <h3><a href="app-debug.apk" download>Calculadora</a></h3>
     <h3><a href="app-debug.apk" download>Jokempo</a></h3>
     </div>
