--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
         </tr>
     </table>
     </div>
+        <div class= relogio>
+    <h3><a href="app-debug.apk" download>Calculadora</a></h3>
+    <h3><a href="app-debug.apk" download>Jokempo</a></h3>
+        </div>
     </div>
     <div class="audio">
         <audio src="badtings.mp3" controls muted loop></audio>
@@ -124,10 +128,7 @@
     <div class= relogio2>
     </h1><a href="https://souzaderecife.github.io/video/">Relógio Digital<h1></a>
     </div>
-    <div class= relogio background: black>
-    <h3><a href="app-debug.apk" download>Calculadora</a></h3>
-    <h3><a href="app-debug.apk" download>Jokempo</a></h3>
-    </div>
+
     
     <div class=ladoalado>
         <img src="Recorder_18102024_200756.jpg" width= "150px">
