--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     display: flex;
     justify-content: space-between;
     margin: 10px;
+    margin-top: 50px;
 }
         .ladoalado {
             bachground: gray;
