--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
             margin: 0;
             padding: 0;
         }
+
+    text-decoration: none;
+    color: black;
+    background-color: aquamarine;
+}
+
+
+a:hover{
+    text-decoration: none;
+    color: aquamarine;
+    background-color: black;
+}
+        
         .audio {
        display: flex;
             align-items= center;
