--- a/index.html
+++ b/index.html
@@ -74,18 +74,6 @@
     margin: 10px;
             }
 
-      a: {
-    text-decoration: none;
-    color: black;
-    background-color: aquamarine;
-}
-
-
-a:hover{
-    text-decoration: none;
-    color: aquamarine;
-    background-color: black;
-}  
     </style>
 </head>
 <body>
@@ -128,7 +116,19 @@ a:hover{
         </tr>
     </table>
     </div>
-        <div class= relogio>
+        <div class= relogio 
+      a: {
+    text-decoration: none;
+    color: black;
+    background-color: aquamarine;
+}
+
+
+a:hover{
+    text-decoration: none;
+    color: aquamarine;
+    background-color: black;
+}  >
     <h3><a href="app-debug.apk" download>Calculadora</a></h3>
     <h3><a href="app-debug.apk" download>Jokempo</a></h3>
         </div>
