--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
         </tr>
     </table>
     </div>
-        <div class= relogio 
+        <div class= relogio>
+            
       a: {
     text-decoration: none;
     color: black;
@@ -128,7 +129,7 @@ a:hover{
     text-decoration: none;
     color: aquamarine;
     background-color: black;
-}  >
+}  
     <h3><a href="app-debug.apk" download>Calculadora</a></h3>
     <h3><a href="app-debug.apk" download>Jokempo</a></h3>
         </div>
