--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
             padding: 0;
         }
 
-        
+        a:link {
+            color: blueviolet;
+        }
+        a:hover {
+            color: black;
+        }
         .audio {
        display: flex;
             align-items= center;
