--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         }
 
         a:link {
-            color: blueviolet;
+            color: black;
         }
         a:hover {
-            color: black;
+            color: yellow;
         }
         .audio {
        display: flex;
