--- a/index.html
+++ b/index.html
@@ -74,14 +74,13 @@ a:hover {
     margin-top: 450px;
 }
 .ladoalado {
-            bachground: gray;
   display: flex;
     justify-content: space-between;
     margin: 10px;
             }
 .relogio {
    display: flex;
-   
+   justify-content: center;
 }
     </style>
 </head>
