--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ a:hover {
     </div>
     
     <div class= relogio>
-    </h1><a href="https://souzaderecife.github.io/video/">Relógio Digital<h1></a>
+    </h1><a href="https://souzaderecife.github.io/video/" color: yellow>Relógio Digital<h1></a>
     </div>
         
     </div>
