--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ a:hover {
    display: flex;
    justify-content: center;
    font-size: 30px;
-   a: color= yellow;
+   background-color: yellow;
 }
     </style>
 </head>
