--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ a:hover {
    justify-content: center;
    font-size: 30px;
    background-color: yellow;
+   margin: 15px;
 }
     </style>
 </head>
