--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ a:hover {
 .fundo{
             background-image: linear-gradient(45deg,  black, white);
             height: 200vh;
-            color: white;
+            color: black;
             font-family: 'Times New Roman', Times, serif;
             text-align : center;
 
